syntax = "proto3";

package pb_film;

option go_package = "./;pb_film";

message Film {
    string Name = 1;
    string Year = 2;
    double Rating = 3;
}

message ReqAllFilms {}

message ResAllFilms {
    repeated Film Films = 1;
}

service BizService {
    rpc AllFilms (ReqAllFilms) returns (ResAllFilms) {};
}